--- a/Crypt/Crypt.vcxproj
+++ b/Crypt/Crypt.vcxproj
@@ -31,6 +31,7 @@
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
     <Import Project="$(VCTargetsPath)Microsoft.CPP.UpgradeFromVC71.props" />
+    <Import Project="Sign.props" />
   </ImportGroup>
   <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -85,12 +86,7 @@
     <PreBuildEvent>
       <Message>Generating Checksum.h...</Message>
       <Command>xcopy /Q /Y "$(SolutionDir)Updater\bin\Release\Updater.exe" "$(SolutionDir)Release\"
-xcopy /Q /Y "$(SolutionDir)Razor\bin\Release\Razor.exe" "$(SolutionDir)Release\"
 xcopy /Q /Y "$(SolutionDir)UltimaSDK\bin\Release\Ultima.dll" "$(SolutionDir)Release\"
-signtool sign /a /n "Mark Sturgill" /tr http://time.certum.pl/ /d "Razor Updater" /du https://github.com/msturgill/razor  "$(SolutionDir)Release\Updater.exe"
-signtool sign /a /n "Mark Sturgill" /tr http://time.certum.pl/ /d "Razor Assistant" /du https://github.com/msturgill/razor  "$(SolutionDir)Release\Razor.exe"
-signtool sign /a /n "Mark Sturgill" /tr http://time.certum.pl/ /d "Ultima SDK" /du https://github.com/msturgill/razor  "$(SolutionDir)Release\Ultima.dll"
-
 del $(SolutionDir)Crypt\Checksum.h
 $(ProjectDir)GenerateRazorChecksumH.exe</Command>
     </PreBuildEvent>
@@ -107,14 +103,13 @@ $(ProjectDir)GenerateRazorChecksumH.exe</Command>
       <PrecompiledHeader>
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <DebugInformationFormat>
-      </DebugInformationFormat>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CallingConvention>StdCall</CallingConvention>
     </ClCompile>
     <Link>
       <AdditionalDependencies>ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>Crypt.def</ModuleDefinitionFile>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>
@@ -124,7 +119,8 @@ $(ProjectDir)GenerateRazorChecksumH.exe</Command>
     </Link>
     <PostBuildEvent />
     <PostBuildEvent>
-      <Command>signtool sign /a /n "Mark Sturgill" /tr http://time.certum.pl/ /d "Razor Crypt Assembly" /du https://github.com/msturgill/razor  "$(SolutionDir)Release\Crypt.dll"</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
